# dstat_frontend

./: Cargo.toml  Rocket.toml  dstat.db
migrations/2022-07-15-152254_dstat_setup/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: app-menu.js  app.js  bootstrap-extended.css  bootstrap.css  chart-apex.js  colors.css  components.css  css.css  dark-layout.css  dashboard-analytics.css  highcharts.js  horizontal-menu.css  palette-gradient.css  semi-dark-layout.css  tour.css
templates/: dstat.html.hbs  server_status.html.hbs
