[package]
name = "dstat_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
diesel = { version = "1", features = ["default"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }